src/objects/ATR_Record__c.object
<CustomObject>
    <fields>
        <fullName>ATR_BI_Status__c</fullName>
        <label>ATR BI Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Audited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account ID Audited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ATR Records</relationshipLabel>
        <relationshipName>ATR_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Serial_Number__c</fullName>
        <label>Asset Serial Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Process_Time__c</fullName>
        <label>Batch Process Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Status_30day__c</fullName>
        <label>Booking Status 30day</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status_Quarter__c</fullName>
        <label>Booking Status Quarter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decommissioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decommissioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Discount__c</fullName>
        <label>Default Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Default_Renewal_SKU__c</fullName>
        <label>Default Renewal SKU</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ATR Records (Distributor Id)</relationshipLabel>
        <relationshipName>ATR_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ELA_ESA_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELA ESA Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <picklist>
            <picklistValues>
                <fullName>Data Error - No Renewal Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Error - No PAN Dist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Error - No PriceBookEntryId</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Error - No Default Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer is PANW</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension_Auth_Code__c</fullName>
        <label>Extension Auth Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Reg_Date__c</fullName>
        <label>License Reg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Opportunity_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ATR Records</relationshipLabel>
        <relationshipName>ATR_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Auth_Code__c</fullName>
        <externalId>true</externalId>
        <label>Old Auth Code</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Past_Discount_Category__c</fullName>
        <label>Past Discount Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ATR Record</label>
    <nameField>
        <label>ATR Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATR Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>